k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chatboot-rag
  labels:
    app: chatboot-rag
